--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -658,14 +658,14 @@ Wrap it up.
 Cite everything we used.
 \begin{enumerate}
 
-\item \textbf{Apache Cordova:} https://cordova.apache.org/
-\item \textbf{Golang:} https://golang.org/
-\item \textbf{PostgreSQL:} http://www.postgresql.org/
-\item \textbf{PostGIS:} http://postgis.net/
-\item \textbf{Phonegap Facebook Plugin:} https://github.com/Wizcorp/phonegap-facebook-plugin
-\item \textbf{PQ Library for Go:} https://github.com/lib/pq
-\item \textbf{Gorilla Sessions for Go:} http://www.gorillatoolkit.org/pkg/sessions
-\item \textbf{Bootstrap:} http://getbootstrap.com/
+\item \textbf{Apache Cordova:} \url{https://cordova.apache.org/}
+\item \textbf{Golang:} \url{https://golang.org/}
+\item \textbf{PostgreSQL:} \url{http://www.postgresql.org/}
+\item \textbf{PostGIS:} \url{http://postgis.net/}
+\item \textbf{Phonegap Facebook Plugin:} \url{https://github.com/Wizcorp/phonegap-facebook-plugin}
+\item \textbf{PQ Library for Go:} \url{https://github.com/lib/pq}
+\item \textbf{Gorilla Sessions for Go:} \url{http://www.gorillatoolkit.org/pkg/sessions}
+\item \textbf{Bootstrap:} \url{http://getbootstrap.com/}
 
 \end{enumerate}
 
