--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -637,7 +637,7 @@ After logging in, a user may visit one of the following views:
 Initially, the mobile applications for the PhotoHunter Project were to be
 developed for both iOS and Android. However, due to the limited time available
 and scope of the project, the team decided to develop the applications just for
-Android. 
+Android.
 
 
 
@@ -648,7 +648,30 @@ Talk about how we implemented everything.
 How to make it better.
 
 \section{Conclusions}
-Wrap it up.
+
+One of the important lessons we learned this semester is that learning new
+framework and tech greatly slows the progress of development. None of us were
+familiar with Cordova and the most knowledgeable of us was only barely familiar
+with mobile app development. Further, we had not built any web APIs in Go
+before and had no experience working with PostgreSQL extensions. However, once
+we overcame the learning curves, we were pleased with the technology choices we
+made.
+
+We also learned how difficult it is to navigate an API with confusing and
+inconsistent documentation. In our case, the culprit was the Facebook Login
+API.\@ We ultimately succeeded, but not before many hours were spent figuring out
+what is a simple process explained poorly.
+
+As mentioned above, we were very pleased overall with our technology
+choices. We would not change any of those at this time. Given the opportunity
+to begin the semester again, we would like to have laid out a clear schedule
+with milestones sooner in the project lifetime. Confusion about what needed to
+be done when impacted our progress early in the semester, although we
+ultimately got that sorted out.
+
+Both our customer and our team consider our project reasonably successful. We
+did not complete all objectives. However, we made good progress and laid the
+groundwork for future development.
 
 \section{References}
 Cite everything we used.
