adding user manual for photohunter

--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -670,5 +670,23 @@ Cite everything we used.
 \end{enumerate}
 
 \section{User's Manual and Installation Guide}
+\subsection{PhotoHunter}
+The PhotoHunter application can be installed by downloading the apk file to an
+Android device (Version 4.4.2) and installing it through the phone's interface.
+Upon launch, the app will display the title screen with a log in button.
+Clicking the login button will prompt the user to login using their Facebook
+credentials.  Once logged in, the user is presented with a list of categories
+to choose from, as well as a button (their Facebook profile picture) linking to
+their account page.  Clicking on the profile picture button sends the user to a
+page with their account information, filled out using the Facebook API.
+Clicking on a category in the category list sends the user to a photo capture
+page.  Clicking the capture button opens the native camera application on the
+user's phone and allows the user to take a picture.  Once the picture is taken,
+an upload button and the user's location appear.  Clicking on the upload button
+sends the image to the database.
+ 
+\subsection{QuickPic}
+
+\subsection{Researcher's Interface}
 
 \end{document}
