Added User Manual - QuickPic

--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -710,6 +710,22 @@ sends the image to the database.
 
 \subsection{QuickPic}
 
+The QuickPic application can be installed by downloading the apk file to an
+Android device (Version 4.4.2) and installing it through the phone's
+interface. Upon launch, the app will display the title screen with a log in
+button. Clicking the log in button will prompt the user to log in with their
+Facebook account.
+
+Once logged in, the user is presented with the main menu. Three buttons are
+displayed: Photo Quiz, Statistics, and Leaderboards. However, only the 'Photo
+Quiz' button is implemented at this time. Clicking this button will begin a
+photo quiz. An image will be displayed for a very short period (presently
+750ms), and then a list of potential categories will be presented to the
+user. Upon selecting a category, statistics about the distribution of category
+choices are presented. This statistics screen has two buttons: Menu and
+Continue. Menu returns to the main menu, and Continue presents the user with
+another image.
+
 \subsection{Researcher's Interface}
 
 \end{document}
