--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -20,16 +20,26 @@
   Dataset Creation
   \footnote{Project location:
     \url{https://github.com/QuesoTech/PhotoHunter}
-  } \\
-  \textit{CS 499 - Senior Design, University of Kentucky}
+  }
 }
 
-\author{Connor Greenwell \and Ryan Baltenberger
-  \and J.\ David Smith \and Aaron Bradshaw
-\and Scott Workman\footnote{Customer}}
+\author{
+	Ryan Baltenberger \and 
+	Aaron Bradshaw \and 
+	Connor Greenwell \and 
+	J.\ David Smith \and 
+	Scott Workman\footnote{Customer}
+}
+
+\date{}
 
 \begin{document}
+
 \maketitle
+
+\begin{center}
+  \textit{CS 499 - Senior Design, University of Kentucky, \today}
+\end{center}
 
 \begin{abstract}
   The PhotoHunter project is a system intended to simplify the creation of
@@ -45,9 +55,6 @@
   are then provided to the researchers that requested the dataset. The system
   provides entertainment for users and useful datasets for researchers.
 \end{abstract}
-
-
-
 
 \section{Disclaimer}
 This project has been designed and implemented as a part of the requirements
