--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -77,7 +77,51 @@ such damages.
 
 
 \section{Introduction}
-Intro goes here.
+
+% The sections of the Introduction should be understandable by someone technically 
+% competent with the area of the project but not familiar with this project. The 
+% introduction includes:
+% - a description of the feature to be supplied to the customer/user, or the problem 
+%   you are solving
+% - The motivation for providing this (why is this needed)
+% - The customer/users (the customer and users may be distinct)
+
+One of the largest roadblocks to successful computer vision is the difficulty of
+acquiring large quantities of accurate ground truth data for a given problem 
+statement. Traditionally, this task has been relegated to under-paid and over-worked
+underclassmen or new graduate students. This technique has produced some of the
+most famous datasets in the field (Caltech-101, Caltech-256). However, the size of
+these datasets no longer supports current machine learning research. Recently,
+many researchers have opted to use Amazon Mechanical Turk to create and verify their
+datasets. However, due to the nature of outsourcing tasks to those motivated to
+perform them quickly and thoughtlessly using AMT comes at a hefty financial and 
+accuracy cost.
+
+Many researchers have experimented with this and other forms of ``citizen science''
+for data collection and verifivation. Outsoucing data collection tasks is especially
+valuable for when it is impossible, financially or practically, for researchers to
+collect their data themselves (ornothologists figured this out many years ago).
+
+We propose a ``citizen science'' system for collecting large, verified sets of images
+for computer vision research by ``game-ifying'' the interface. Rather than instruct
+users to ``collect imagery and atmospheric data around trees in urban areas'', they
+will be on a {\em scavenger hunt} taking pictures to try and beat their friends.
+Similarly, rather than asking users to ``verify that the image is of a dog'', they
+will be playing a quick recall game wherein they're asked what a picture was of after
+a split second.
+
+To this end we have created a three part software suite, titled {\em PhotoHunter}
+which consists of the following:
+\begin{description}
+	\item[PhotoHunter] A photo scanvenger hunt app \todo{}
+	\item[QuickPic] Quick response game \todo{}
+	\item[Researcher Interface] \todo{}
+\end{description}
+
+Our customer for this project is a graduate student with the Computer Science
+Department, Scott Workman. We expect the users of our product suite would be
+two-fold: researchers interested in collecting datasets this way; and the general
+mobile-gaming public.
 
 \section{Product Specifications}
 
