--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -78,14 +78,6 @@ such damages.
 
 \section{Introduction}
 
-% The sections of the Introduction should be understandable by someone technically 
-% competent with the area of the project but not familiar with this project. The 
-% introduction includes:
-% - a description of the feature to be supplied to the customer/user, or the problem 
-%   you are solving
-% - The motivation for providing this (why is this needed)
-% - The customer/users (the customer and users may be distinct)
-
 One of the largest roadblocks to successful computer vision is the difficulty of
 acquiring large quantities of accurate ground truth data for a given problem 
 statement. Traditionally, this task has been relegated to under-paid and over-worked
@@ -113,9 +105,9 @@ a split second.
 To this end we have created a three part software suite, titled {\em PhotoHunter}
 which consists of the following:
 \begin{description}
-	\item[PhotoHunter] A photo scanvenger hunt app \todo{}
-	\item[QuickPic] Quick response game \todo{}
-	\item[Researcher Interface] \todo{}
+	\item[PhotoHunter] A photo scanvenger hunt app for collecting images
+	\item[QuickPic] Quick response game for collecting labels for images
+	\item[Researcher Interface] For requesting and viewing datasets
 \end{description}
 
 Our customer for this project is a graduate student with the Computer Science
