Added schedule & milestones.

--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -24,10 +24,10 @@
 }
 
 \author{
-	Ryan Baltenberger \and 
-	Aaron Bradshaw \and 
-	Connor Greenwell \and 
-	J.\ David Smith \and 
+	Ryan Baltenberger \and
+	Aaron Bradshaw \and
+	Connor Greenwell \and
+	J.\ David Smith \and
 	Scott Workman\footnote{Customer}
 }
 
@@ -78,23 +78,23 @@ such damages.
 
 \section{Introduction}
 
-% The sections of the Introduction should be understandable by someone technically 
-% competent with the area of the project but not familiar with this project. The 
+% The sections of the Introduction should be understandable by someone technically
+% competent with the area of the project but not familiar with this project. The
 % introduction includes:
-% - a description of the feature to be supplied to the customer/user, or the problem 
+% - a description of the feature to be supplied to the customer/user, or the problem
 %   you are solving
 % - The motivation for providing this (why is this needed)
 % - The customer/users (the customer and users may be distinct)
 
 One of the largest roadblocks to successful computer vision is the difficulty of
-acquiring large quantities of accurate ground truth data for a given problem 
+acquiring large quantities of accurate ground truth data for a given problem
 statement. Traditionally, this task has been relegated to under-paid and over-worked
 underclassmen or new graduate students. This technique has produced some of the
 most famous datasets in the field (Caltech-101, Caltech-256). However, the size of
 these datasets no longer supports current machine learning research. Recently,
 many researchers have opted to use Amazon Mechanical Turk to create and verify their
 datasets. However, due to the nature of outsourcing tasks to those motivated to
-perform them quickly and thoughtlessly using AMT comes at a hefty financial and 
+perform them quickly and thoughtlessly using AMT comes at a hefty financial and
 accuracy cost.
 
 Many researchers have experimented with this and other forms of ``citizen science''
@@ -350,10 +350,23 @@ Our actual values, as computed by the \texttt{cloc} program:
 We did not complete all of our project goals. Given completion of all of them, we estimate that we would have about 30\% more code (2127 LOC).
 
 \section{Schedule and Milestones}
-Some stuff about our schedule goes here.
 
+Below is a time-line of our milestones:
 
-
+\begin{center}
+  \begin{tabular}{l|l}
+    Milestone & Date \\
+    \hline
+    Start of Module Design & 7 March \\
+    Completion of Module Design & 9 March \\
+    Start of Module Code & 10 March \\
+    Prototype Available to Customer & 1 April \\
+    Start of Module Testing & 8 April \\
+    Available for Customer Testing & 30 April \\
+    Completion of Module Code & 2 May \\
+    Completion of Module Testing & 2 May
+  \end{tabular}
+\end{center}
 
 \section{Platforms, Tools, and Languages}
 
