Added class deadlines to schedule section.

--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -38,7 +38,7 @@
 \maketitle
 
 \begin{center}
-  \textit{CS 499 - Senior Design, University of Kentucky, \today}
+  \textit{CS 499 --- Senior Design, University of Kentucky, \today}
 \end{center}
 
 \begin{abstract}
@@ -349,12 +349,16 @@ Below is a time-line of our milestones:
   \begin{tabular}{l|l}
     Milestone & Date \\
     \hline
+    Project Web Page Completion & 13 February \\
     Start of Module Design & 7 March \\
     Completion of Module Design & 9 March \\
     Start of Module Code & 10 March \\
+    Midterm Presentation & 11 March \\
     Prototype Available to Customer & 1 April \\
+    Test Plan Completion & 6 April \\
     Start of Module Testing & 8 April \\
-    Available for Customer Testing & 30 April \\
+    Available for Customer Testing & 24 April \\
+    Final Project Presentation & 27 April \\
     Completion of Module Code & 2 May \\
     Completion of Module Testing & 2 May
   \end{tabular}
