adding link to mturk

--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -79,13 +79,14 @@ such damages.
 
 \section{Introduction}
 
-One of the largest roadblocks to successful computer vision is the difficulty of
-acquiring large quantities of accurate ground truth data for a given problem
-statement. Traditionally, this task has been relegated to under-paid and over-worked
-underclassmen or new graduate students. This technique has produced some of the
-most famous datasets in the field (Caltech-101, Caltech-256). However, the size of
-these datasets no longer supports current machine learning research. Recently,
-many researchers have opted to use Amazon Mechanical Turk to create and verify their
+One of the largest roadblocks to successful computer vision is the difficulty
+of acquiring large quantities of accurate ground truth data for a given problem
+statement. Traditionally, this task has been relegated to under-paid and
+over-worked underclassmen or new graduate students. This technique has produced
+some of the most famous datasets in the field (Caltech-101, Caltech-256).
+However, the size of these datasets no longer supports current machine learning
+research. Recently, many researchers have opted to use Amazon Mechanical
+Turk~\footnote{\url{https://www.mturk.com/}} to create and verify their
 datasets. However, due to the nature of outsourcing tasks to those motivated to
 perform them quickly and thoughtlessly using AMT comes at a hefty financial and
 accuracy cost.
